[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/jean28518.jTools/jSettings/JSettings.gd" type="Script" id=1]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMedium.tres" type="DynamicFont" id=3]

[node name="JSettings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.07125
anchor_top = 0.111667
anchor_right = 0.93625
anchor_bottom = 0.908333
color = Color( 0.180392, 0.184314, 0.223529, 0.960784 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Back" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.0
margin_top = -65.7451
margin_right = 76.0
margin_bottom = -14.7451
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.10125
anchor_top = 0.156667
anchor_right = 0.9
anchor_bottom = 0.77
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
margin_right = 627.0
margin_bottom = 547.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScrollContainer/GridContainer"]
margin_right = 473.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_FULLSCREEN"

[node name="Fullscreen" type="CheckBox" parent="ScrollContainer/GridContainer"]
margin_left = 540.0
margin_right = 564.0
margin_bottom = 45.0
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 49.0
margin_right = 473.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_SHADOWS"

[node name="Shadows" type="CheckBox" parent="ScrollContainer/GridContainer"]
margin_left = 540.0
margin_top = 49.0
margin_right = 564.0
margin_bottom = 94.0
size_flags_horizontal = 4
align = 1

[node name="Label8" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 98.0
margin_right = 473.0
margin_bottom = 143.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_FOG"

[node name="Fog" type="CheckBox" parent="ScrollContainer/GridContainer"]
margin_left = 540.0
margin_top = 98.0
margin_right = 564.0
margin_bottom = 143.0
size_flags_horizontal = 4
align = 1

[node name="Label11" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 147.0
margin_right = 473.0
margin_bottom = 192.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_PERSONS"

[node name="Persons" type="CheckBox" parent="ScrollContainer/GridContainer"]
margin_left = 540.0
margin_top = 147.0
margin_right = 564.0
margin_bottom = 192.0
size_flags_horizontal = 4
align = 1

[node name="Label9" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 196.0
margin_right = 473.0
margin_bottom = 241.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_VIEW_DISTANCE"

[node name="ViewDistance" type="SpinBox" parent="ScrollContainer/GridContainer"]
margin_left = 477.0
margin_top = 196.0
margin_right = 627.0
margin_bottom = 241.0
min_value = 250.0
max_value = 1000.0
value = 1000.0
align = 1

[node name="Label6" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 248.0
margin_right = 473.0
margin_bottom = 293.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_ANTI_ALIASING"

[node name="AntiAliasing" type="OptionButton" parent="ScrollContainer/GridContainer"]
margin_left = 477.0
margin_top = 245.0
margin_right = 627.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 3 )
text = "Disabled"
align = 1
items = [ "Disabled", null, false, 0, null, "2x", null, false, 1, null, "4x", null, false, 2, null, "8x", null, false, 3, null, "16x", null, false, 4, null ]
selected = 0

[node name="Label10" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 300.0
margin_right = 473.0
margin_bottom = 345.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_AUTOMATIC_FRAMEDROP_FIX"

[node name="FramedropFix" type="CheckBox" parent="ScrollContainer/GridContainer"]
margin_left = 540.0
margin_top = 300.0
margin_right = 564.0
margin_bottom = 345.0
size_flags_horizontal = 4
align = 1

[node name="Label7" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 352.0
margin_right = 473.0
margin_bottom = 397.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_LANGUAGE"

[node name="Language" type="OptionButton" parent="ScrollContainer/GridContainer"]
margin_left = 477.0
margin_top = 349.0
margin_right = 627.0
margin_bottom = 400.0
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="Label3" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 404.0
margin_right = 473.0
margin_bottom = 449.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_MAIN_VOLUME"

[node name="MainVolume" type="HSlider" parent="ScrollContainer/GridContainer"]
margin_left = 477.0
margin_top = 404.0
margin_right = 627.0
margin_bottom = 449.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 453.0
margin_right = 473.0
margin_bottom = 498.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_GAME_VOLUME"

[node name="GameVolume" type="HSlider" parent="ScrollContainer/GridContainer"]
margin_left = 477.0
margin_top = 453.0
margin_right = 627.0
margin_bottom = 498.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="ScrollContainer/GridContainer"]
margin_top = 502.0
margin_right = 473.0
margin_bottom = 547.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_MUSIC_VOLUME"

[node name="MusicVolume" type="HSlider" parent="ScrollContainer/GridContainer"]
margin_left = 477.0
margin_top = 502.0
margin_right = 627.0
margin_bottom = 547.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Shadows" to="." method="_on_Shadows_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Fog" to="." method="_on_Fog_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Persons" to="." method="_on_Persons_pressed"]
[connection signal="value_changed" from="ScrollContainer/GridContainer/ViewDistance" to="." method="set_view_distance"]
[connection signal="item_selected" from="ScrollContainer/GridContainer/AntiAliasing" to="." method="set_anti_aliasing"]
[connection signal="item_selected" from="ScrollContainer/GridContainer/AntiAliasing" to="." method="save_and_apply_current_settings"]
[connection signal="pressed" from="ScrollContainer/GridContainer/FramedropFix" to="." method="_on_Fog_pressed"]
[connection signal="item_selected" from="ScrollContainer/GridContainer/Language" to="." method="_on_Language_item_selected"]
[connection signal="value_changed" from="ScrollContainer/GridContainer/MainVolume" to="." method="set_main_volume"]
[connection signal="value_changed" from="ScrollContainer/GridContainer/GameVolume" to="." method="set_game_volume"]
[connection signal="value_changed" from="ScrollContainer/GridContainer/MusicVolume" to="." method="set_music_volume"]
